<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="very_good">Very Good</string>
    <string name="very_bad">Very Bad</string>
    <string name="bad">Bad</string>
    <string name="okay">Okay</string>
    <string name="good">Good</string>
    <string name="select_your_mood">How do you feel today?</string>
    <string name="select_date">Select date</string>
    <string name="mood">Mood: </string>
    <string name="template">01/01/2019</string>
    <string name="experiences">experiences</string>
    <string name="date">date</string>
    <string name="mood_state">state</string>
    <string name="entry_list">liste</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="template_experiences">Heute ist ein schöner Tag</string>
    <string name="dateSeparator">/</string>
    <string name="period_year">year</string>
    <string name="period_month">month</string>
    <string name="period_week">week</string>
</resources>
