<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

   <RadioGroup
       android:id="@+id/mood_select"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/select_prompt"
       >

       <RadioButton
           android:id="@+id/very_bad_radio_button"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignTop="@+id/mood_select"
           android:layout_alignParentStart="true"
           android:layout_marginStart="0dp"
           android:onClick="checkMoodButton"
           android:text="@string/very_bad" />

    <RadioButton
        android:id="@+id/bad_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bad"
        android:layout_below="@id/very_bad_radio_button"
        android:onClick="checkMoodButton"
        />

    <RadioButton
        android:id="@+id/okay_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:layout_below="@id/bad_radio_button"
        android:onClick="checkMoodButton"
        />

    <RadioButton
        android:id="@+id/good_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good"
        android:layout_below="@id/okay_radio_button"
        android:onClick="checkMoodButton"

        />



    <RadioButton
        android:id="@+id/very_good_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/very_good"
        android:layout_below="@id/good_radio_button"
        android:onClick="checkMoodButton"
        />

    </RadioGroup>

    <TextView
        android:id="@+id/select_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_mood"
        android:textSize="30sp"
        android:layout_below="@id/date"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="Select Date"

        />

    <EditText
        android:id="@+id/experiences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/mood_select"
        android:layout_centerHorizontal="true"
        android:hint="Share your experiences"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>