<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="5dp"
    >


    <TextView
        android:id="@+id/entry_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/template"/>

    <TextView
        android:id="@+id/mood_header"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:layout_below="@+id/entry_date"
        android:text="@string/mood"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/entry_mood"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="20sp"
        android:layout_below="@+id/mood_header"
        android:text="@string/okay"
        android:textColor="@color/colorPrimary"
        />


    <TextView
        android:id="@+id/experience_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:layout_toEndOf="@id/entry_mood"
        android:layout_below="@+id/entry_date"
        android:textSize="20sp"
        android:text="bliblablub"
        />

</RelativeLayout>